# controls_challenge

./: .gitignore  NOTES.md  README.md  common.py  generate_pid_data.py  human_whiteboard.md  modal_collect.py  modal_collect_diverse.py  modal_collect_training_data.py  modal_train_bicycle.py  modal_train_models.py  optimize_pid.py  pyproject.toml  test_match.py  tinyphysics.py  tinyphysics_eqx.py  train_bicycle.py
controllers/: ilqr.py
tests/: test_physics_parity.py  test_tinyphysics_eqx_parity.py  test_weights.py
